--- a/client/app/index.html
+++ b/client/app/index.html
@@ -43,8 +43,7 @@
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/videos">Videos</a></li>
             </ul>
           </div>
         </div>
