fully functioning CRUD. Fixed VideoDeleteCtrl typo that prevented delete aspect

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -87,6 +87,10 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/videos.js"></script>
+        <script src="scripts/controllers/video-add.js"></script>
+        <script src="scripts/controllers/video-view.js"></script>
+        <script src="scripts/controllers/video-edit.js"></script>
+        <script src="scripts/controllers/video-delete.js"></script>
         <!-- endbuild -->
 </body>
 </html>
